# booboo

./: .gitignore  3rd_party.html  BUILDING.txt  CHANGELOG.txt  CMakeLists.txt  CONTRIBUTING.txt  CREDITS.txt  LICENSE.txt  MODDING.txt  README.txt  README_CLI.txt  README_TOOLS.txt  shim5.json
benchmarks/: leibniz.boo
benchmarks/core_lib/: benchmark-inline.lua  benchmark.boo  benchmark.lua  benchmark2.lua  leibniz.boo  sine-inline.boo  sine.boo  sine.lua
benchmarks/game_lib/: plasma.boo  plasma.lua  robots.boo  robots.lua  sine.boo
cli-examples/: arithmetic.boo  cfg.boo  dragonslayer.boo  expressions.boo  file_print.boo  for.boo  fpointers.boo  if.boo  lpointers.boo  mapdig.boo  matrix.boo  matvecmul.boo  not.boo  oo.boo  pointers.boo  ref3.boo  references.boo  regex.boo  toptr.boo  vecmath.boo
core-examples/: dragonslayer.boo  file_print.boo  for.boo  if.boo  lpointers.boo  map_keys.boo  matrix.boo  matvecmul.boo  mmul.boo  oo.boo  pointers.boo  ref2.boo  references.boo  regex.boo  test.boo  test_typeof.boo  vecmath.boo  vmul.boo
core-examples/core_lib/: for.boo
data/: shim5.json
data/audio/mml/sfx/: button.mml  widget.mml
data/scripts/: main.boo
demos/CoinHunt/: game.boo
demos/CoinHunt/data/scripts/: game.boo
demos/RAINRUNNER/: draw.inc
demos/RAINRUNNER/data/scripts/: game.boo
demos/SimpleInvaders/: main.boo
demos/slideshow/: clock.boo  robots.boo  sine.boo  walk.boo
demos/slideshow/data/scripts/: main.boo  pong.boo  robots.boo  walk.boo
demos/town/data/misc/maps/: map.wm2  map.wm3
demos/town/data/scripts/: main.boo
docs/: 3rd_party.html  API.txt  BooBoo.html  BooBoo.txt  Game_API.txt  Game_Engine.html  Game_Lib.html  Game_Lib.txt  MML.html  MML.txt  Music.html  Standard_Lib.txt  Tutorial.html  Tutorial.txt  index.html  style.css
examples/2.5d/data/scripts/: main.boo
examples/3dclone/data/gfx/models/: zeus.x
examples/3dclone/data/scripts/: main.boo
examples/3dcollision/data/gfx/models/: sphere.x
examples/3dcollision/data/scripts/: main.boo  poll_joystick.inc
examples/3dcube/data/scripts/: main.boo
examples/3dterrain/data/scripts/: main.boo
examples/3dtest/data/scripts/: main.boo
examples/3dtexcube/data/scripts/: main.boo
examples/9patch_shake/data/scripts/: main.boo
examples/CoinHunt/data/scripts/: enter_score.boo  game.boo  highscores.boo  main.boo
examples/DOOMED/data/scripts/: enter_score.boo  game.boo  highscores.boo  main.boo  poll_joystick.inc
examples/DUMB/data/scripts/: main.boo
examples/Dog-O Soundtrack/data/audio/mml/: title.mml
examples/Dog-O Soundtrack/data/scripts/: main.boo
examples/RAINRUNNER/data/scripts/: draw.inc  enter_score.boo  game.boo  highscores.boo  main.boo  poll_joystick.inc  run.inc  win.boo
examples/SimpleInvaders/data/scripts/: main.boo
examples/a_star/data/scripts/: main.boo
examples/b1stable/data/scripts/: main.boo
examples/billboards/data/scripts/: main.boo
examples/binary/data/scripts/: main.boo
examples/blend/data/scripts/: main.boo
examples/calculator/data/scripts/: main.boo
examples/core_lib/: expressions.boo  file.txt  fish.boo  for.boo  label_vars.boo  map_keys.boo  mapdig.boo  more_fishing.boo  oo.boo  pointers.boo  read_line.boo  scan.boo  test_input.boo  test_typeof.boo
examples/custom_black_bars/data/scripts/: main.boo
examples/deadpix/data/scripts/: main.boo
examples/dogost/data/scripts/: main.boo
examples/dynamiclight/data/scripts/: main.boo
examples/events/data/scripts/: main.boo
examples/float/data/scripts/: main.boo
examples/fullscreen_toggle/data/scripts/: main.boo
examples/game_lib/binary/: main.boo
examples/game_lib/mouse/: main.boo
examples/game_lib/plasma/: main.boo
examples/game_lib/plasma2/: main.boo
examples/game_lib/shaders/: main.boo
examples/game_lib/starfield/: main.boo
examples/gui/data/scripts/: main.boo
examples/gui_transitions/data/scripts/: main.boo
examples/illnorth/data/scripts/: main.boo
examples/json/data/: colours.json
examples/json/data/scripts/: main.boo
examples/keys/: keycodes.inc
examples/keys/data/scripts/: main.boo
examples/lit3d/data/scripts/: main.boo
examples/lit3dmodel/data/scripts/: main.boo
examples/magenta/: README.txt
examples/magenta/data/: shim5.json
examples/magenta/data/scripts/: main.boo
examples/mouse/data/scripts/: main.boo
examples/musicplayer/: dir.txt
examples/musicplayer/data/scripts/: main.boo
examples/nooskewl/data/scripts/: main.boo
examples/pixfx/data/: shim5.json
examples/pixfx/data/scripts/: main.boo
examples/plasma/data/scripts/: main.boo
examples/plasma2/data/scripts/: main.boo
examples/pong/data/scripts/: main.boo
examples/portrait/data/: shim5.json
examples/portrait/data/scripts/: main.boo
examples/resize/data/scripts/: main.boo
examples/rtl_palette/data/scripts/: main.boo
examples/samples/: main.boo
examples/samples/data/scripts/: main.boo
examples/save_image/data/scripts/: main.boo
examples/shaders/data/scripts/: main.boo
examples/slideshow/data/scripts/: clock.boo  main.boo  pong.boo  slideshow_start.inc  sneaky.boo  walk.boo
examples/speedtest/data/scripts/: main.boo
examples/sprites/data/scripts/: main.boo  poll_joystick.inc
examples/starfield/: main.boo
examples/starfield/data/scripts/: main.boo
examples/tilemap/data/scripts/: main.boo
examples/town/data/scripts/: main.boo
hlsl/: noo_default_textured_fragment.shader
include/booboo/: booboo.h  core_lib.h  game_lib.h  internal.h  standard_lib.h
license/: LICENSE.txt
misc/: booboo.manifest  shim4.json  shim5.json  versioninfo.rc  versioninfo_cli.rc
misc/batch_files/cmake/windows/: booboo.bat  shim4.bat  tgui6.bat
mods/: build-linux.sh  build-windows.sh  build.sh  hsv.cpp  jpeg.cpp  mpg123.cpp
old-examples/core_lib/: arithmetic.boo  if.boo  label_pointers.boo  oo.boo  test_typeof.boo
origdata/hlsl/: red_fragment.txt
origdata/music/: RAINRUNNER.flp  RAINRUNNER2.flp  coinhunt_game.flp  coinhunt_menu.flp
src/: booboo.cpp  core_lib.cpp  dll_example.cpp  game_launcher.cpp  game_lib.cpp  launcher.cpp  standard_lib.cpp
(+55 files in other folders)
